# Mocinetica

./: README.md  pyproject.toml
app/: __init__.py
app/config/: __init__.py
app/front/assets/css/: brands.css  cars.css  style.css
app/front/assets/js/: admFuncs.js  getBrands.js  getCars.js  script.js
app/front/html/: base.html  upCar.html
app/model/: __init__.py
app/model/tables/brands/: __init__.py
app/model/tables/cars/: __init__.py
app/model/tables/users/: __init__.py
app/views/: __init__.py
app/views/api/: __init__.py  public.__init__.py
app/views/api/functions/: brand.py  car.py
app/views/auth/: __init__.py
app/views/auth/functions/: __init__.py  utils.py
app/views/ui/: __init__.py
app/views/ui/functions/: brands.py  cars.py
migrations/versions/: f34cc9d82d69_.py
